Add community feature with create join and member system