@@ -461,12 +461,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import java.util.List;
 import java.io.IOException;
-import java.util.Collections;
+
 
 
 @Component
@@ -500,8 +502,11 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
 
 
-        String path = request.getRequestURI();
+        // String path = request.getRequestURI();
+String path = request.getRequestURI();
 
+System.out.println("REQUEST PATH = " + path);
+System.out.println("AUTH HEADER = " + request.getHeader("Authorization"));
 
 
 
@@ -554,26 +559,75 @@ boolean valid = jwtService.validate(token, userId);
 
 System.out.println("JWT VALID = " + valid);
 
-if (valid) {
-    User user = userRepository.findById(userId).orElse(null);
+// if (valid) {
+//     User user = userRepository.findById(userId).orElse(null);
 
-    if (user != null &&
-        SecurityContextHolder.getContext().getAuthentication() == null) {
+//     if (user != null &&
+//         SecurityContextHolder.getContext().getAuthentication() == null) {
+//           System.out.println(
+//     "AUTH USER = " +
+//     SecurityContextHolder
+//     .getContext()
+//     .getAuthentication()
+//     .getName()
+// );
+//         // UsernamePasswordAuthenticationToken authentication =
+//         //         new UsernamePasswordAuthenticationToken(
+//         //                 userId,
+//         //                 null,
+//         //                 Collections.emptyList()
+//         //         );
+//         UsernamePasswordAuthenticationToken authentication =
+//         new UsernamePasswordAuthenticationToken(
+//                 userId,
+//                 null,
+//                 List.of(
+//                     new SimpleGrantedAuthority("ROLE_USER")
+//                 )
+//         );
+
+//         SecurityContextHolder.getContext().setAuthentication(authentication);
+
+// System.out.println("JWT AUTHENTICATED");
+// System.out.println("Authenticated User = " + authentication.getName());
+//     }
+// }
+
+
+if (valid) {
+
+    User user = userRepository
+            .findById(userId)
+            .orElse(null);
+
+
+    if (user != null) {
+
 
         UsernamePasswordAuthenticationToken authentication =
                 new UsernamePasswordAuthenticationToken(
                         userId,
                         null,
-                        Collections.emptyList()
+                        List.of(
+                            new SimpleGrantedAuthority("ROLE_USER")
+                        )
                 );
 
-        SecurityContextHolder.getContext().setAuthentication(authentication);
 
-System.out.println("JWT AUTHENTICATED");
-System.out.println("Authenticated User = " + authentication.getName());
+        SecurityContextHolder
+                .getContext()
+                .setAuthentication(authentication);
+
+
+
+        System.out.println("JWT AUTHENTICATED");
+        System.out.println(
+                "Authenticated User = "
+                + authentication.getName()
+        );
+
     }
 }
-
 
         }
         catch(Exception e){
